# watermark

./: .gitignore  LICENSE  README.md  document-for-agent.md  pyproject.toml
watermark_cli/: cli.py  config.py  watermark.py
